--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,14 @@
         }
     ],
     "require": {
-        "nesbot/carbon": "^3.8"
+        "nesbot/carbon": "^3.8",
+        "symfony/mailer": "7.1.6"
+    },
+    "autoload": {
+        "classmap": ["classes/", "library/"],
+        "files": ["config/database.php"],
+        "psr-4": {
+            "": "src/"
+        }
     }
 }
