--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Raphael Straschewski",
-            "email": "raphael.straschewski@gmx.de"
+            "name": "Raphael S",
+            "email": "raphael@gmx.de"
         }
     ],
     "require": {
